--- a/views/main.hbs
+++ b/views/main.hbs
@@ -4,7 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MongoDB CRUD</title>
   </head>
-  <body>
+  <body
+    style="display: flex; flex-direction: column; justify-content: center; align-items: center;"
+  >
     <h1>MongoDB CRUD</h1>
     {{message}}
 
